--- a/plugin.yml
+++ b/plugin.yml
@@ -1,10 +1,11 @@
 name: GuildsRPG
-author: [Tethered_ & NeuroBinds Project]
-description: A Plugin For Easily Managing Guilds
-version: 1.3.2
+author: [Cynoser]
+description: Guilds
+version: Cynoser_Dv.03-2
 main: GuildsRPG\GCore
 api:
 - 2.0.0
+- 3.0.0
 commands:
   guilds:
     description: use /guilds help for all parameters
